--- a/index.html
+++ b/index.html
@@ -39,10 +39,16 @@
 <body>
   <div class="sidebar">
     <h3>heartmore99pct</h3>
-    <p><b>1.</b><br><b>2.</b><br><b>3.</b></p>
-    <p><a href="#">INSTAGRAM</a><br>
-       <a href="#">TWITTER</a><br>
-       <a href="#">MAIL</a></p>
+    <p>
+      <b><a href="https://link1.com">1.</a></b><br>
+      <b><a href="https://link2.com">2.</a></b><br>
+      <b><a href="https://link3.com">3.</a></b>
+    </p>
+    <p>
+      <a href="#">INSTAGRAM</a><br>
+      <a href="#">X</a><br>
+      <a href="#">MAIL</a>
+    </p>
   </div>
   <div class="content">
     <img src="image1.jpg" onclick="enlarge(this)">
