--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
   <div class="sidebar">
     <h3>heartmore99pct</h3>
     <p>
-      <b><a href="https://link1.com">1.</a></b><br>
-      <b><a href="https://link2.com">2.</a></b><br>
-      <b><a href="https://link3.com">3.</a></b>
+      <b><a href="#">1.</a></b><br>
+      <b><a href="#">2.</a></b><br>
+      <b><a href="#">3.</a></b>
     </p>
     <p>
       <a href="#">INSTAGRAM</a><br>
