--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     </p>
   </div>
   <div class="content">
-    <img src="image1.jpg" onclick="enlarge(this)">
-    <img src="image2.jpg" onclick="enlarge(this)">
+    <img src="https://github.com/heartmore99pct/heartmore99pct.github.io/blob/main/%EC%83%88%20%ED%8F%B4%EB%8D%94%20(4)/5acd0cc2f1174921b9b3fb78de4d26ab~tplv-wopfjsm1ax-aigc_resize_4096_4096.webp" onclick="enlarge(this)">
+    <img src="https://github.com/heartmore99pct/heartmore99pct.github.io/blob/main/%EC%83%88%20%ED%8F%B4%EB%8D%94%20(4)/2a6d9cea-b079-4507-a5f6-64cb016e4e51.jpg" onclick="enlarge(this)">
     <img src="image3.jpg" onclick="enlarge(this)">
     <img src="image4.jpg" onclick="enlarge(this)">
     <img src="image5.jpg" onclick="enlarge(this)">
