--- a/index.html
+++ b/index.html
@@ -8,29 +8,11 @@
       margin: 0;
       background-color: #ffb6c1;
       font-family: Helvetica, sans-serif;
-    }
-
-    /* 상단 row: 이름 + 첫 이미지 */
-    .top-row {
       display: flex;
-      align-items: center;
-      gap: 20px;
-      padding: 40px;
     }
-    .top-row h3 {
-      margin: 0;
-      color: white;
-    }
-    .top-row img {
-      width: 150px;       /* 원하는 크기로 조정 가능 */
-      border-radius: 12px; /* 둥근 모서리 */
-      cursor: pointer;
-      object-fit: cover;   /* 이미지 비율 유지 */
-    }
-
-    /* 사이드바 */
     .sidebar {
-      padding: 0 40px 40px 40px;
+      width: 20%;
+      padding: 40px;
       color: white;
       font-size: 14px;
       line-height: 1.8;
@@ -40,31 +22,23 @@
       text-decoration: none;
     }
     .sidebar a:hover { text-decoration: underline; }
-
-    /* 나머지 이미지 그리드 */
     .content {
+      width: 80%;
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 20px;
-      padding: 0 40px 40px 40px;
+      padding: 40px;
     }
     .content img {
       width: 100%;
-      border-radius: 12px; /* 둥근 모서리 */
       cursor: pointer;
-      object-fit: cover;
+      border-radius: 0px;
     }
   </style>
 </head>
 <body>
-  <!-- 상단 row: 이름 + 첫 이미지 -->
-  <div class="top-row" style="background-color:#ff69b4;">
-    <h3>heartmore99pct</h3>
-    <img src="새 폴더 (4)/2a6d9cea-b079-4507-a5f6-64cb016e4e51.jpg" onclick="enlarge(this)">
-  </div>
-
-  <!-- 사이드바 링크 -->
   <div class="sidebar">
+    <h3>heartmore99pct</h3>
     <p>
       <b><a href="#">1.</a></b><br>
       <b><a href="#">2.</a></b><br>
@@ -76,9 +50,8 @@
       <a href="#">MAIL</a>
     </p>
   </div>
-
-  <!-- 나머지 이미지 그리드 -->
   <div class="content">
+    <img src="새 폴더 (4)/2a6d9cea-b079-4507-a5f6-64cb016e4e51.jpg" onclick="enlarge(this)">
     <img src="새 폴더 (4)/5acd0cc2f1174921b9b3fb78de4d26ab~tplv-wopfjsm1ax-aigc_resize_4096_4096.webp" onclick="enlarge(this)">
     <img src="image3.jpg" onclick="enlarge(this)">
     <img src="image4.jpg" onclick="enlarge(this)">
