--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 </head>
 <body>
   <!-- 모바일 메뉴 버튼 -->
-  <button class="toggle-btn" id="toggleBtn" onclick="toggleSidebar()">ᛡ</button>
+  <button class="toggle-btn" id="toggleBtn" onclick="toggleSidebar()">܀</button>
 
   <!-- 사이드바 -->
   <div class="sidebar" id="sidebar">
@@ -165,7 +165,7 @@
       const sidebar = document.getElementById('sidebar');
       const toggleBtn = document.getElementById('toggleBtn');
       sidebar.classList.toggle('active');
-      toggleBtn.innerHTML = sidebar.classList.contains('active') ? 'ᛡ' : 'ᛡ'; // < / >
+      toggleBtn.innerHTML = sidebar.classList.contains('active') ? '܀' : '܀'; // < / >
     }
 
     function enlarge(img) {
