--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     /* 모바일 메뉴 버튼 */
     .toggle-btn {
       display: none;
+      align-items: center;
       position: fixed;
       top: 90%;
       left: 0px;
@@ -130,7 +131,7 @@
 </head>
 <body>
   <!-- 모바일 메뉴 버튼 -->
-  <button class="toggle-btn" id="toggleBtn" onclick="toggleSidebar()"> ♪</button>
+  <button class="toggle-btn" id="toggleBtn" onclick="toggleSidebar()">♪</button>
 
   <!-- 사이드바 -->
   <div class="sidebar" id="sidebar">
@@ -165,7 +166,7 @@
       const sidebar = document.getElementById('sidebar');
       const toggleBtn = document.getElementById('toggleBtn');
       sidebar.classList.toggle('active');
-      toggleBtn.innerHTML = sidebar.classList.contains('active') ? ' ♪' : ' ♪'; // < / >
+      toggleBtn.innerHTML = sidebar.classList.contains('active') ? '♪' : '♪'; // < / >
     }
 
     function enlarge(img) {
