--- a/index.html
+++ b/index.html
@@ -194,5 +194,11 @@
       document.body.appendChild(overlay);
     }
   </script>
+
+<audio autoplay loop>
+  <source src="https://cdn.pixabay.com/download/audio/2025/09/02/audio_4a6be7e49b.mp3" type="audio/mpeg">
+</audio>
+
+</body>
 </body>
 </html>
