--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       border-radius: 0;
     }
 
-    /* 모바일 메뉴 버튼 */
+    /* 토글 버튼 */
     .toggle-btn {
       display: none;
       position: fixed;
@@ -76,20 +76,21 @@
       cursor: pointer;
     }
 
-    /* 모바일 BGM 버튼 */
+    /* BGM 버튼 스타일 */
     .bgm-btn {
-      display: none;
+      display: block;
       position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background-color: rgba(255,255,255,0.7);
-      color: #FF0051;
-      border: none;
+      top: 10px; /* PC 오른쪽 위 */
+      right: 17px;
+      background-color: rgba(255, 255, 255, 0);
+      color: black;
+      border: 0px solid #FF0051;
       padding: 10px 15px;
-      font-size: 16px;
-      border-radius: 5px;
+      font-size: 18px;
+      border-radius: 0px;
       z-index: 1000;
       cursor: pointer;
+      box-shadow: 0 0px 0px rgba(0,0,0,0.3);
     }
 
     .mobile-header {
@@ -116,7 +117,9 @@
       }
 
       .bgm-btn {
-        display: block;
+        top: 4px;       /* 위쪽 위치 해제 */
+        bottom: auto;    /* 모바일 오른쪽 아래 */
+        right: 4px;
       }
 
       .sidebar {
@@ -152,8 +155,8 @@
   <!-- 모바일 메뉴 버튼 -->
   <button class="toggle-btn" id="toggleBtn" onclick="toggleSidebar()"> ♪</button>
 
-  <!-- 모바일 BGM 버튼 -->
-  <button class="bgm-btn" id="bgmBtn" onclick="toggleBGM()">🎵 BGM</button>
+  <!-- BGM 버튼 -->
+  <button class="bgm-btn" id="bgmBtn" onclick="toggleBGM()">♬</button>
 
   <!-- 사이드바 -->
   <div class="sidebar" id="sidebar">
@@ -184,7 +187,7 @@
   </div>
 
   <!-- BGM -->
-  <audio id="bgm" autoplay loop>
+  <audio id="bgm" loop>
     <source src="새 폴더 (4)/audio_4a6be7e49b.mp3" type="audio/mpeg">
   </audio>
 
@@ -222,7 +225,7 @@
       document.body.appendChild(overlay);
     }
 
-    // 모바일 BGM 버튼 재생/정지
+    // BGM 버튼 재생/정지
     function toggleBGM() {
       const bgm = document.getElementById('bgm');
       if (bgm.paused) {
@@ -231,6 +234,14 @@
         bgm.pause();
       }
     }
+
+    // 페이지 열리자마자 PC에서 자동재생 시도 (일부 브라우저 제한 있음)
+    window.addEventListener('DOMContentLoaded', () => {
+      const bgm = document.getElementById('bgm');
+      bgm.play().catch(() => {
+        console.log('자동재생 불가, 버튼으로 재생 가능');
+      });
+    });
   </script>
 </body>
 </html>
