--- a/index.html
+++ b/index.html
@@ -117,9 +117,10 @@
       }
 
       .bgm-btn {
-        top: 4px;       /* 위쪽 위치 해제 */
-        bottom: auto;    /* 모바일 오른쪽 아래 */
-        right: 4px;
+        top: auto;       /* 위쪽 위치 해제 */
+        bottom: 4px;    /* 모바일 오른쪽 아래 */
+        right: 364px;
+
       }
 
       .sidebar {
