--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 </head>
 <body>
   <!-- 모바일 메뉴 버튼 -->
-  <button class="toggle-btn" id="toggleBtn" onclick="toggleSidebar()"> ♪</button>
+  <button class="toggle-btn" id="toggleBtn" onclick="toggleSidebar()">❣</button>
 
   <!-- BGM 버튼 -->
   <button class="bgm-btn" id="bgmBtn" onclick="toggleBGM()">♬</button>
