--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       display: block;
       position: fixed;
       top: 10px; /* PC 오른쪽 위 */
-      right: 17px;
+      right: 10px;
       background-color: rgba(255, 255, 255, 0);
       color: black;
       border: 0px solid #FF0051;
@@ -154,7 +154,7 @@
 </head>
 <body>
   <!-- 모바일 메뉴 버튼 -->
-  <button class="toggle-btn" id="toggleBtn" onclick="toggleSidebar()">❣</button>
+  <button class="toggle-btn" id="toggleBtn" onclick="toggleSidebar()">⫲</button>
 
   <!-- BGM 버튼 -->
   <button class="bgm-btn" id="bgmBtn" onclick="toggleBGM()">♬</button>
