--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       color: black;
       border: 0px solid #FF0051;
       padding: 10px 15px;
-      font-size: 18px;
+      font-size: 17px;
       border-radius: 0px;
       z-index: 1000;
       cursor: pointer;
@@ -154,7 +154,7 @@
 </head>
 <body>
   <!-- 모바일 메뉴 버튼 -->
-  <button class="toggle-btn" id="toggleBtn" onclick="toggleSidebar()">⫲</button>
+  <button class="toggle-btn" id="toggleBtn" onclick="toggleSidebar()">װ</button>
 
   <!-- BGM 버튼 -->
   <button class="bgm-btn" id="bgmBtn" onclick="toggleBGM()">♬</button>
