--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       height: 100%;
       overflow-x: hidden;
       font-family: 'STIX Two Text', Helvetica, sans-serif;
-      background-color: #FFAEC9;
+      background-color: #FE78FF;
       display: flex;
       flex-wrap: nowrap;
     }
@@ -37,7 +37,7 @@
     .sidebar b a:hover { text-decoration: underline; }
 
     .sidebar p a.special-link {
-      color: #787878;
+      color: #004F00;
       font-style: italic;
       text-decoration: none;
     }
@@ -80,8 +80,8 @@
     .bgm-btn {
       display: block;
       position: fixed;
-      top: 10px; /* PC 오른쪽 위 */
-      right: 10px;
+      top: 9px; /* PC 오른쪽 위 */
+      right: 18px;
       background-color: rgba(255, 255, 255, 0);
       color: black;
       border: 0px solid #FF0051;
