--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       height: 100%;
       overflow-x: hidden;
       font-family: 'STIX Two Text', Helvetica, sans-serif;
-      background-color: #FE78FF;
+      background-color: #FE8AFF;
       display: flex;
       flex-wrap: nowrap;
     }
@@ -189,7 +189,7 @@
 
   <!-- BGM -->
   <audio id="bgm" loop>
-    <source src="새 폴더 (4)/audio_4a6be7e49b.mp3" type="audio/mpeg">
+    <source src="새 폴더 (4)/audio.mp3" type="audio/mpeg">
   </audio>
 
   <script>
