--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Heartmore99Percent</title>
+
+  <!-- 🔹 파비콘 추가 -->
+  <link rel="icon" type="image/x-icon" href="새 폴더 (4)/ico.ico">
+  <!-- 🔹 여기까지 -->
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap');
@@ -262,4 +267,4 @@
     // ==============================
   </script>
 </body>
-</html>
+</html> 
