--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
       <b><a href="#">3.</a></b>
     </p>
     <p>
-      <a href="#" class="special-link">INSTAGRAM</a><br>
-      <a href="#" class="special-link">X</a><br>
-      <a href="#" class="special-link">MAIL</a>
+      <a href="#" class="special-link">❤︎</a><br>
+      <a href="#" class="special-link">❤︎</a><br>
+      <a href="#" class="special-link">❤︎</a>
     </p>
   </div>
 
