--- a/index.html
+++ b/index.html
@@ -260,12 +260,12 @@
     const imageSets = {
       1: [
         "새 폴더 (4)/2a6d9cea-b079-4507-a5f6-64cb016e4e51.jpg",
-        "새 폴더 (4)/5acd0cc2f1174921b9b3fb78de4d26ab~tplv-wopfjsm1ax-aigc_resize_4096_4096.webp",
+        "새 폴더 (4)/7d3bf173-96be-48a6-bbe4-4ab86349c73b.png",
         "image3.jpg",
         "image4.jpg"
       ],
-      2: ["imageA.jpg","imageB.jpg","imageC.jpg"],
-      3: ["photo1.png","photo2.png","photo3.png","photo4.png"]
+      2: ["새 폴더 (4)/7d3bf173-96be-48a6-bbe4-4ab86349c73b.png","imageB.jpg","imageC.jpg"],
+      3: ["새 폴더 (4)/2a6d9cea-b079-4507-a5f6-64cb016e4e51.jpg","photo2.png","photo3.png","photo4.png"]
     };
 
     function loadImages(setNumber) {
